changed Site theme colors, also fixed blurred overlay not spanning the whole search page for RadioPage.tsx and DownloadPage.tsx

--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
 :root {
-    --bg-dark: oklch(0 0.0043 163deg);
-    --bg: oklch(.15 0.0043 163deg);
-    --bg-light: oklch(.25 calc(0.0043 * .8) 163deg);
+    --bg-dark: oklch(0 0 68deg);
+    --bg: oklch(.15 0 68deg);
+    --bg-light: oklch(.2 calc(0 * .8) 68deg);
 
-    --text: oklch(1 0.0028666666666666667 163deg);
-    --text-muted: oklch(.8 0.0028666666666666667 163deg);
+    --text: oklch(1 0 68deg);
+    --text-muted: oklch(.8 0 68deg);
 
-    --border-highlight: oklch(.6 0.0043 163deg);
-    --border: oklch(.4 0.0043 163deg);
-    --border-muted: oklch(.3 0.0043 163deg);
+    --border-highlight: oklch(.4 0 68deg);
+    --border: oklch(.3 0 68deg);
+    --border-muted: oklch(.2 0 68deg);
 
-    --gradient: linear-gradient(0deg, oklch(.15 0.0043 163deg), oklch(.25 calc(0.0043 * .8) 163deg));
+    --gradient: linear-gradient(0deg, oklch(.15 0 68deg), oklch(.25 calc(0 * .8) 68deg));
 
-    --primary: oklch(1 .5 270deg);
-    --secondary: oklch(1 .34 300deg);
+    --primary: oklch(1 .5 68deg);
+    --secondary: oklch(1 .34 68deg);
 
-    --error: oklch(.8 max(min(calc(0.0043 * 2), .4), .2) 20deg);
-    --warning: oklch(.8 max(min(calc(0.0043 * 2), .4), .2) 100deg);
-    --success: oklch(.8 max(min(calc(0.0043 * 2), .4), .2) 150deg);
-    --info: oklch(.8 max(min(calc(0.0043 * 2), .4), .2) 260deg);
+    --error: oklch(.8 max(min(calc(0 * 2), .4), .2) 20deg);
+    --warning: oklch(.8 max(min(calc(0 * 2), .4), .2) 100deg);
+    --success: oklch(.8 max(min(calc(0 * 2), .4), .2) 150deg);
+    --info: oklch(.8 max(min(calc(0 * 2), .4), .2) 260deg);
 
     background: var(--bg-dark);
 
