--- a/src/app/pages/DownloadPage.css
+++ b/src/app/pages/DownloadPage.css
@@ -1,21 +1,36 @@
 #download-page {
+    position: relative;
+    height: 100%;
 
     #search {
         display: block;
     }
 
-    #page {
-        .grid {
+    #page-wrapper {
+        position: relative;
+        border-radius: 8px;
+        overflow: hidden;
+
+        #page {
+            position: relative;
+            padding: 1dvh;
+
+            #x {
+                overflow: scroll;
+            }
 
         }
+
         #overlay.searching {
             position: absolute;
+            top: 0;
+            left: 0;
+
             width: 100%;
             height: 100%;
+
             background: #00000077;
             backdrop-filter: blur(10px);
-            top: 0;
         }
-
     }
 }
