--- a/src/app/pages/RadioPage.css
+++ b/src/app/pages/RadioPage.css
@@ -1,25 +1,36 @@
 #radio-page {
+    position: relative;
+    height: 100%;
+
     #search {
         display: block;
     }
 
-    #page {
-        display: flex;
-        flex-direction: column;
-        box-sizing: border-box;
+    #page-wrapper {
+        position: relative;
+        border-radius: 8px;
+        overflow: hidden;
 
-        padding: 1dvh;
-        gap: 1dvh;
+        #page {
+            position: relative;
+            padding: 1dvh;
+
+            #x {
+                overflow: scroll;
+            }
+
+        }
+
+        #overlay.searching {
+            position: absolute;
+            top: 0;
+            left: 0;
+
+            width: 100%;
+            height: 100%;
+
+            background: #00000077;
+            backdrop-filter: blur(10px);
+        }
     }
-
-    #overlay.searching {
-        top: 0;
-        left: 0;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: #00000077;
-        backdrop-filter: blur(10px);
-    }
-
 }
